# aoc-2022

./: Cargo.toml  README.md
.github/workflows/: update-from-template.yml
src/: template.txt
